# signals

./: AUTHORS  Makefile.am  README.md  aclocal.m4  configure.ac
include/: signalHandler.h  signalHandlerExecutor.h  signal_handler.h  signals.h
src/: signal.cpp  signalHandler.cpp  signalHandlerExecutor.cpp  signalHandlerWrapper.cpp  signals.cpp
test/: test.c  test.cpp
